omni/tests/goldens/types/unknown_type_19.err
tests/goldens/types/unknown_type_19.omni:1:13: error: unknown type "Mystery19"
     1 | let value19:Mystery19 = 1
       |             ^^^^^^^^^
     2 | 
  hint: import or declare the type before use

tests/goldens/types/unknown_type_19.omni:1:1: error: type mismatch: cannot assign int to Mystery19
     1 | let value19:Mystery19 = 1
       | ^^^^^^^^^^^^^^^^^^^^^^^^^
     2 | 
  hint: convert the expression to Mystery19 or change the variable type to int
