omni/tests/goldens/types/unknown_type_19.omni
let value19:Mystery19 = 1
